<resources>

    <string name="app_name">DBPie</string>
    <string name="action_reset">Reset</string>
    
    <string name="pref_service_setting">Service Setting</string>
    <string name="service_checkbox">Enable/Disable Service</string>
    <string name="notification_link">Notification Service (not implemented)</string>
    
    <string name="pref_appearance_setting">Appearance</string>
    <string name="color_link">Color</string>
    	<string name="color_categ">Default Coloring</string>
    	<string name="color_first">Main Color</string>
    	<string name="color_second">Outline Color</string>
    	<string name="color_third">Icon Color</string>
    	<string name="color_fourth">Reset Colors</string>
    	<string name="per_categ">Per App Coloring</string>
    <string name="behavior_link">Behavior (not implemented)</string>
	<string name="sizing_link">Size and Gravity</string>
	
	<string name="full_version_setting">Upgrade to Pro</string>
	<string name="upgrade_link">Play Store (not implemented)</string>
	
	<string name="accessibility_service_description">This service needs to be enabled for the Home, Back,
	     and Recents buttons to function properly. \n \nOnce enabled, Pie will be on all the time until it is 
	     disabled. The service will start up on boot so there is no need to do this more than once unless 
	     you disable Pie.</string>
	<string name="trigger_category">Trigger Sizing</string>
	<string name="pie_size_category">Pie Sizing</string>
	<string name="trigger_width_label">Trigger Width (Restart phone to apply)</string>
	<string name="trigger_height_label">Trigger Height (Restart phone to apply)</string>
	<string name="pie_sizing_label">Pie Size</string>
	
</resources>
